--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,12 @@
 <header class="navbar navbar-fixed-top  ">
   <div class="container">
     <%= link_to image_tag("Clear Logo.jpg", alt: "The IPL Room"), root_path %>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", about_path %></li>
-        <li><%= link_to "Contact", contact_path %></li>
-      </ul>
 
-    </nav>
+<%= link_to "Home |", root_path %>
+<%= link_to "About", about_path %>
+<%= link_to "| Contact ", contact_path %>
+
+
+
   </div>
 </header>
