--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -22,7 +22,7 @@
 
   	  	
   	  	
-		<%= f.submit "Create my account", class: "btn btn-primary" %>
+		<%= f.submit "Send message", class: "btn btn-primary" %>
 
 
 	<% end %>
