Fix spelling error in email

--- a/app/views/user_mailer/message_email.html.erb
+++ b/app/views/user_mailer/message_email.html.erb
@@ -13,6 +13,6 @@
         <br>
         <%= @contact.message %>
     </p>
-    <p>Thanks for Ryan Murphy Website Design</p>
+    <p>Thanks for using Ryan Murphy Website Design</p>
   </body>
 </html>
