--- a/app/views/user_mailer/message_email.text.erb
+++ b/app/views/user_mailer/message_email.text.erb
@@ -18,4 +18,4 @@ You have an enquiry from <%= @contact.name %>
 
 
 -----------------------------------------------------------
-Thanks for Ryan Murphy Website Design
+Thanks for using Ryan Murphy Website Design
