--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,19 @@
 <% provide(:title, 'About') %>
-
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class="container-fluid">
+  
+  <div class="row">
+    <div class="col-sm-5 col-md-6">
+    <%= link_to image_tag("lumenis-quantum-ipl2.jpg", alt: "Lumenis Quantum IPL"), 'http://www.lumenis.com/', :class => 'LumenisIPL' %>
+    </div>
+    <br>
+    <div class="col-sm-5 col-sm-offset-2 col-md-6 col-md-offset-0" style="background-color:lavender;">
+    <h1>The Lumenis Quantum IPL</h1>
+There are many things to be aware of before you decide to proceed with Hair Removal or Photo Rejuvenation skin treatments. Most crucial is the quality of Intense Pulsed Light machine that will be used in your treatment. There are many different brands of machine and the quality, efficiency and effectiveness varies dramatically.
+ <br>
+<br>
+I have had 12 years experience in teaching IPL and using various different machines. I have carried out my own extensive research before purchasing the Lumenis Quantum IPL and after seeing the results, I was confident with my decision. To help you make your own informed decision, I offer consultations before proceeding with any treatment.
+<br>
+<br>
+    </div>
+  </div>
+</div>
